--- a/courbe_intensite.ipynb
+++ b/courbe_intensite.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Courbes d’intensités\n",
     "\n",
-    "Courbes d’intensités lumineuse au limbe à partir d'images d’un coronographe"
+    "Exemple simple : Courbes d’intensités lumineuse au limbe à partir d'images d’un coronographe"
    ]
   },
   {
@@ -16,12 +16,8 @@
    "outputs": [],
    "source": [
     "import bz2\n",
-    "from pathlib import Path\n",
-    "\n",
     "from astropy.io import fits\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "import math"
    ]
   },
@@ -58,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +119,6 @@
     "plt.plot(curves[1],'g');\n",
     "plt.plot(curves[2],'b');\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
