--- a/carrington_sunpy.ipynb
+++ b/carrington_sunpy.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Carrington SunPy"
+    "# Carrington SunPy\n",
+    "\n",
+    "https://docs.sunpy.org/en/stable/generated/gallery/map_transformations/reprojection_carrington.html\n",
+    "\n",
+    "https://docs.sunpy.org/en/stable/generated/gallery/map_transformations/reprojection_aia_euvi_mosaic.html"
    ]
   },
   {
