--- a/reconL2.ipynb
+++ b/reconL2.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from module import readFits\n",
+    "from module import readFitsBz2\n",
     "\n",
     "import numpy as np\n",
     "import cv2 as cv\n",
@@ -32,7 +32,7 @@
     "# 'data/L2/imoa_03933_l2_20240228_12402419_emi1.fts.bz2'\n",
     "# 'data/L2/imoa_03933_l2_20240228_14452489_emi1.fts.bz2'\n",
     "\n",
-    "data = readFits('data/L2/imoa_03933_l2_20240228_12402419_emi1.fts.bz2')"
+    "data = readFitsBz2('data/L2/imoa_03933_l2_20240228_12402419_emi1.fts.bz2')"
    ]
   },
   {
@@ -61,8 +61,8 @@
     "img_canny = cv.Canny(blur, 8, 14)\n",
     "\n",
     "plt.figure(figsize=(12,12))\n",
-    "plt.subplot(121),plt.imshow(blur)\n",
-    "plt.title('Blur'), plt.xticks([]), plt.yticks([]);\n",
+    "plt.subplot(121),plt.imshow(img)\n",
+    "plt.title('Original'), plt.xticks([]), plt.yticks([]);\n",
     "plt.subplot(122),plt.imshow(img_canny)\n",
     "plt.title('Canny'), plt.xticks([]), plt.yticks([]);"
    ]
