--- a/carrington_sunpy.ipynb
+++ b/carrington_sunpy.ipynb
@@ -13,9 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\lherrington\\anaconda3\\envs\\climso\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +89,10 @@
     }
    ],
    "source": [
-    "aia_map = sunpy.map.Map(data, header)\n",
+    "map = sunpy.map.Map(data, header)\n",
     "fig = plt.figure()\n",
-    "ax = fig.add_subplot(projection=aia_map)\n",
-    "aia_map.plot(axes=ax)\n",
+    "ax = fig.add_subplot(projection=map)\n",
+    "map.plot(axes=ax)\n",
     "plt.show()"
    ]
   },
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,26 +114,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "shape = data.shape\n",
-    "carr_header = make_heliographic_header(aia_map.date, aia_map.observer_coordinate, shape, frame='carrington')"
+    "carr_header = make_heliographic_header(map.date, map.observer_coordinate, shape, frame='carrington')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "outmap = aia_map.reproject_to(carr_header)"
+    "outmap = map.reproject_to(carr_header)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
