--- a/reconL2.ipynb
+++ b/reconL2.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detecteur de canny pour obtenir les contours."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 276,
    "metadata": {},
@@ -65,6 +72,13 @@
     "plt.title('Original'), plt.xticks([]), plt.yticks([]);\n",
     "plt.subplot(122),plt.imshow(img_canny)\n",
     "plt.title('Canny'), plt.xticks([]), plt.yticks([]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ouverture pour confondre les elements proches."
    ]
   },
   {
@@ -119,6 +133,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On labelise chaque element et on supprime les elements correspondant au contour du disque."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 279,
    "metadata": {},
@@ -151,6 +172,13 @@
     "\n",
     "plt.figure(figsize=(6,6))\n",
     "plt.imshow(false_colors);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rectangle entourant chaque element."
    ]
   },
   {
