--- a/carrington_simple.ipynb
+++ b/carrington_simple.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Carte Carrington\n",
+    "# Carte Carrington simple\n",
     "\n",
     "Exemple simple de \"carte de carrington\" sans projection"
    ]
