update reworked grouping

--- a/NOAA.ipynb
+++ b/NOAA.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ftplib import FTP\n",
-    "from sunpy.io.special import srs"
+    "from sunpy.io.special import srs\n",
+    "\n",
+    "from module import toSunpyMap"
    ]
   },
   {
@@ -147,13 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "latest = '/pub/latest/SRS.txt'\n",
     "\n",
-    "filename = 'pub/warehouse/2024/SRS/20240323SRS.txt'\n",
+    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2')\n",
+    "filename = 'pub/warehouse/' + str(map.date.datetime.year) + '/SRS/' + map.date.strftime(\"%Y%m%d\") + 'SRS.txt'\n",
     "\n",
     "with FTP(\"ftp.swpc.noaa.gov\") as ftp:\n",
     "    ftp.login()\n",
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +206,7 @@
        " 'None']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><i>QTable length=12</i>\n",
-       "<table id=\"table1677666962032\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table2685416617456\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>ID</th><th>Number</th><th>Carrington Longitude</th><th>Area</th><th>Z</th><th>Longitudinal Extent</th><th>Number of Sunspots</th><th>Mag Type</th><th>Latitude</th><th>Longitude</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>uSH</th><th></th><th>deg</th><th></th><th></th><th>deg</th><th>deg</th></tr></thead>\n",
        "<thead><tr><th>str2</th><th>int32</th><th>float64</th><th>float64</th><th>str3</th><th>float64</th><th>int32</th><th>str16</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -259,7 +262,7 @@
        "  IA  13611                273.0     ——— ...               --     28.0      46.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
