--- a/identify.ipynb
+++ b/identify.ipynb
@@ -73,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assigning NOAAs to old map table :"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -168,7 +175,7 @@
     "    \n",
     "    if min_dist<0.02:\n",
     "        table_old[min_idx]['noaa'] = region['Number']\n",
-    "        print(table_old[min_idx]['label'],' '+str(region['Number']), ' '+str(min_dist))"
+    "        print(table_old[min_idx]['label'], ' '+str(region['Number']), ' '+str(min_dist))"
    ]
   },
   {
@@ -256,6 +263,13 @@
     "    line['id'] = get_new_id()\n",
     "\n",
     "table_old"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting NOAAs :"
    ]
   },
   {
