--- a/NOAA.ipynb
+++ b/NOAA.ipynb
@@ -155,7 +155,7 @@
    "source": [
     "latest = '/pub/latest/SRS.txt'\n",
     "\n",
-    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2')\n",
+    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2', center_disk=True)\n",
     "filename = 'pub/warehouse/' + str(map.date.datetime.year) + '/SRS/' + map.date.strftime(\"%Y%m%d\") + 'SRS.txt'\n",
     "\n",
     "with FTP(\"ftp.swpc.noaa.gov\") as ftp:\n",
