--- a/grouping.ipynb
+++ b/grouping.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from module import getUmbraPenumbra, toSunpyMap\n",
     "\n",
-    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2')\n",
+    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2', center_disk=True)\n",
     "\n",
     "umbra, penumbra = getUmbraPenumbra(map)"
    ]
@@ -193,7 +193,7 @@
    "source": [
     "from module import getUmbraPenumbra, toSunpyMap\n",
     "\n",
-    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2')\n",
+    "map = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2', center_disk=True)\n",
     "\n",
     "umbra, penumbra = getUmbraPenumbra(map)\n",
     "\n",
