--- a/identify.ipynb
+++ b/identify.ipynb
@@ -37,10 +37,10 @@
    "source": [
     "from module import toSunpyMap\n",
     "\n",
-    "map_new = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2')\n",
+    "map_new = toSunpyMap('data/L2/imoa_03933_l2_20240323_13052647_emi1.fts.bz2', center_disk=True)\n",
     "\n",
     "# get previous image\n",
-    "map_old = toSunpyMap('data/L2/imoa_03933_l2_20240319_15102678_emi1.fts.bz2')"
+    "map_old = toSunpyMap('data/L2/imoa_03933_l2_20240319_15102678_emi1.fts.bz2', center_disk=True)"
    ]
   },
   {
@@ -52,12 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from module import save_current_index\n",
     "\n",
+    "# resetting index to 0 for testing only\n",
     "save_current_index(0)"
    ]
   },
