--- a/notebooks/LDC_quiet_sun.ipynb
+++ b/notebooks/LDC_quiet_sun.ipynb
@@ -19,9 +19,7 @@
     "from matplotlib import pyplot as plt\n",
     "import os\n",
     "\n",
-    "import sys\n",
-    "sys.path.insert(0, '..')\n",
-    "from module import readFitsBz2"
+    "from astropy.io import fits"
    ]
   },
   {
@@ -45,7 +43,9 @@
     "quiet_list = []\n",
     "i=0\n",
     "for filename in os.listdir(folder):\n",
-    "    quiet_list.append(readFitsBz2(folder + filename))\n",
+    "    with fits.open(filename) as hdul:\n",
+    "        img=hdul[0].data\n",
+    "    quiet_list.append(img)\n",
     "    i+=1\n",
     "    clear_output(wait=False)\n",
     "    print(i)"
