dataset create and other

--- a/identify.ipynb
+++ b/identify.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "from module import get_new_id, groupSunspots\n",
     "\n",
-    "table_old = groupSunspots(map_old)"
+    "table_old = groupSunspots(map_old, threshold=0.03)"
    ]
   },
   {
@@ -359,7 +359,7 @@
     }
    ],
    "source": [
-    "table_new = groupSunspots(map_new)\n",
+    "table_new = groupSunspots(map_new, threshold=0.03)\n",
     "\n",
     "table_new"
    ]
