example usage synoptic map

--- a/example_synoptic_map.ipynb
+++ b/example_synoptic_map.ipynb
@@ -8,12 +8,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from climso.maps import SynopticMap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate map"
    ]
   },
   {
@@ -44,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting\n",
+    "### Plot\n",
     "\n",
     "Mostly just a matplotlib.pyplot.imshow(), but simplifies the task of setting ticks and labels. figsize, cmap, vmin and vmax are parameters of this method."
    ]
