--- a/example_3_detection_ar.ipynb
+++ b/example_3_detection_ar.ipynb
@@ -96,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Table\n"
+    "### Table\n",
+    "\n",
+    "Table conataining active regions positions (longitude, latitude and pixel position), and filament surface area in uSH."
    ]
   },
   {
